--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,12 @@
 name: bankole.org
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
+
+remote_theme: chesterhow/tale
+
+permalink:    /:year-:month-:day/:title
+paginate:     5
+
+plugins:
+  - jekyll-paginate
+  - jekyll-remote-theme
