--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,41 @@
-name: bankole.org
-markdown: kramdown
+# Site settings
+title:          Tale
+description:    "Minimal Jekyll theme for storytellers"
+baseurl:        "/tale"
+url:            "https://chesterhow.github.io"
 
+# Google Analytics
+google_analytics: UA—XXXXXXXX-X
 
-remote_theme: chesterhow/tale
+# Author
+author:
+  name:         Bankole Makanju
+  url:          https://bankole.org
+  email:        bmakanju@gmail.com
 
-permalink:    /:year-:month-:day/:title
-paginate:     5
+# Build settings
+markdown:       kramdown
+include:
+  - _pages
 
+# Assets
+sass:
+  sass_dir:     _sass
+  style:        compressed
+
+# Gems
 plugins:
+  - jekyll-feed
   - jekyll-paginate
-  - jekyll-remote-theme
+  - jekyll-seo-tag
+  # - jemoji #Uncomment this to allow emoji in your post
+
+# Permalinks
+permalink:      /:year-:month-:day/:title
+paginate:       5
+
+# Excludes
+exclude: [ Gemfile, Gemfile.lock, tale.gemspec ]
+
+# Disqus (Set to your disqus id)
+disqus:         jekyll-tale
