--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,11 @@
 # Site settings
-title:          bankole.org
+title:          "bankole.org"
 description:    ""
 # baseurl:        "/index.html"
 url:            "https://bankole.org"
 
 # Google Analytics
 # google_analytics: UA—XXXXXXXX-X
-
 
 # Author
 author:
