--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title:          "bankole.org"
+title:          bankole.org
 description:    ""
 # baseurl:        "/index.html"
 url:            "https://bankole.org"
