--- a/_config.yml
+++ b/_config.yml
@@ -1,43 +1,27 @@
-# Site settings
-title:          bankole.org
-description:    ""
-# baseurl:        "/index.html"
-url:            "https://bankole.org"
-
-# Google Analytics
-# google_analytics: UA—XXXXXXXX-X
-
-# Author
+title: bankole.org
+description: ''
+baseurl: /index.html
+url: 'https://bankole.org'
 author:
-  name:         Bankole Makanju
-  url:          https://bankole.org
-  email:        bmakanju@gmail.com
-
-# Build settings
-markdown:       kramdown
-# include:
-  - _pages
-
-# Assets
+    name: 'Bankole Makanju'
+    url: 'https://bankole.org'
+    email: bmakanju@gmail.com
+markdown: kramdown
+include:
+    - _pages
 sass:
-  sass_dir:     _sass
-  style:        compressed
-
-# Gems
+    sass_dir: _sass
+    style: compressed
 plugins:
-  - jekyll-feed
-  - jekyll-paginate
-  - jekyll-seo-tag
-  - jemoji #Uncomment this to allow emoji in your post
-
-# Permalinks
-#Adding remote-theme
-remote_theme:   chesterhow/tale
-permalink:      /:year-:month-:day/:title
-paginate:       5
-
-# Excludes
-exclude: [ Gemfile, Gemfile.lock, tale.gemspec ]
-
-# Disqus (Set to your disqus id)
-disqus:         jekyll-tale
+    - jekyll-feed
+    - jekyll-paginate
+    - jekyll-seo-tag
+    - jemoji
+remote_theme: chesterhow/tale
+permalink: '/:year-:month-:day/:title'
+paginate: 5
+exclude:
+    - Gemfile
+    - Gemfile.lock
+    - tale.gemspec
+disqus: jekyll-tale
