--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: bankole.org
 description: ''
-# baseurl: /index.html
+baseurl: ''
 url: 'https://bankole.org'
 author:
     name: 'Bankole Makanju'
