--- a/_config.yml
+++ b/_config.yml
@@ -25,3 +25,5 @@ exclude:
     - Gemfile.lock
     - tale.gemspec
 disqus: makanju-org.
+talkyard_server_url: https://comments-for-makanju-org.talkyard.net
+talkyard_script_url: https://c1.ty-cdn.net/-/talkyard-comments.min.js
