--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,6 @@ exclude:
     - Gemfile
     - Gemfile.lock
     - tale.gemspec
-disqus: makanju-org.
+disqus: jekyll-tale
 talkyard_server_url: https://comments-for-makanju-org.talkyard.net
 talkyard_script_url: https://c1.ty-cdn.net/-/talkyard-comments.min.js
