--- a/_config.yml
+++ b/_config.yml
@@ -26,3 +26,4 @@ exclude:
     - tale.gemspec
 talkyard_server_url: https://comments-for-makanju-org.talkyard.net
 talkyard_script_url: https://c1.ty-cdn.net/-/talkyard-comments.min.js
+google_analytics: UA-160597721-1
