--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ author:
     email: ""
 markdown: kramdown
 twitter:
-  username: @zeroplustwo_
+  username: zeroplustwo_
   card: summary
 facebook:
   app_id: ""
